Did things and it was epic

--- a/JPL/JPL.vcxproj
+++ b/JPL/JPL.vcxproj
@@ -152,6 +152,9 @@
   <ItemGroup>
     <ClInclude Include="JPL.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="bugs.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
