--- a/JPL/JPL.vcxproj.filters
+++ b/JPL/JPL.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="bugs.txt" />
+  </ItemGroup>
 </Project>
